# axum-sqlx-template

./: .env.example  .gitignore  Cargo.toml  build.rs  justfile
.sqlx/: query-08d03d6498a07e974fcb09e6006d3305bf4ccc4b5ed07fde2fe5bd37c85b5597.json  query-3a825b5e26ca6186d3a581545ffa44b39ff01ee4066f3248db19b9f1f1279a7d.json  query-5f34a6ea312a60f5d639c93de828aaa2f8d90949d33affb1a2a95b0db6d45af6.json  query-68f48b8aa2021cbfb220c423f3ee8f5bb92795ccfece877263779420ca48ab8e.json  query-77b613a29c99af96bf520391416d43d45fcd1c767df0029d675d0764e69e0b1b.json  query-8b4a0a9ce4ad60653d4fb521341155e012a5dbd1e355a02f9bf6cce78bd0ebad.json  query-d00256b8f7dcfa0536b44e3e4806980a05468ea9e264c58dd7b28efd90917d3e.json  query-d273df93a0b6d2394d7165f41d803ecba340b04467c280336a52e1e4ba2ca053.json
config/: settings.example.toml
migrations/: 20240527064112_sample.down.sql  20240527064112_sample.up.sql
src/: auth.rs  config.rs  docutils.rs  errors.rs  grpc.rs  lib.rs  macros.rs  mailer.rs  main.rs  miscutil.rs  miscutils.rs  oauth.rs  queries.rs  routes.rs  setup.rs  state.rs  testutils.rs
src/auth/: jwt.rs  oauth.rs  session.rs
src/auth/oauth/: github.rs
src/mailer/: templates.rs
src/oauth/: github.rs
src/queries/: federated_credential.rs  user.rs
src/routes/: admin.rs  auth.rs
src/routes/auth/: jwt.rs  oauth.rs  session.rs  utils.rs
src/state/: environment.rs  jwt.rs
tests/: testcontainers.rs
