[package]
name = "axum_sqlx_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["tracing", "macros"] }
config = "0.14.0"
dotenvy = "0.15.7"
listenfd = "1.0.1"
oauth2 = "5.0.0-alpha.4"
redis = { version = "0.25.4", features = ["tokio-comp", "tokio-rustls-comp", "connection-manager"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "uuid"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
typeshare = "1.0.3"

[dev-dependencies]
rstest = "0.21.0"
